Locking/unlocking & started Tween

--- a/OzricUI/Components/ColorConstantDialog.razor
+++ b/OzricUI/Components/ColorConstantDialog.razor
@@ -181,7 +181,7 @@
             }
             case ColorTemp temp:
             {
-                _temp = temp.temp;
+                _temp = (int) temp.temp;
                 break;
             }
             default:
