Fun with tweens

--- a/OzricUI/Components/ColorConstantDialog.razor
+++ b/OzricUI/Components/ColorConstantDialog.razor
@@ -91,7 +91,7 @@
     MudDialogInstance MudDialog { get; set; } = new();
 
     [Parameter]
-    public ColorConstantModel Model { get; set; }
+    public ConstantColorModel Model { get; set; }
 
     [Parameter]
     public Constant Node { get; set; }
