--- a/OzricUI/Components/GraphEditor.razor
+++ b/OzricUI/Components/GraphEditor.razor
@@ -351,7 +351,7 @@
                 switch (c.value.ValueType)
                 {
                     case ValueType.Color:
-                        return new ColorConstantModel(c, point);
+                        return new ConstantColorModel(c, point);
 
                     case ValueType.Boolean:
                     case ValueType.Scalar:
@@ -360,6 +360,9 @@
                         throw new ArgumentOutOfRangeException();
                 }
             }
+
+            case Tween t:
+                return new TweenModel(t, point);
         }
 
         throw new Exception($"Unhandled type {node.GetType()}");
