--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -14,6 +14,7 @@
 @inject IDialogService DialogService
 @inherits LayoutComponentBase
 @inject DataService Data
+@inject HomeHubController HomeHubController
 @inject IEngineService EngineService
 @inject NavigationManager Navigation
 
@@ -143,22 +144,34 @@
         await LoadGraph();
         
         hubConnection = new HubConnectionBuilder()
+            .WithAutomaticReconnect()
             .WithUrl(Navigation.ToAbsoluteUri(HomeHub.ENDPOINT))
+            .AddJsonProtocol(json => Json.Configure(json.PayloadSerializerOptions))
+            .ConfigureLogging(logging =>
+            {
+                logging.AddConsole();
+                logging.SetMinimumLevel(Microsoft.Extensions.Logging.LogLevel.Debug);
+            })
             .Build();
 
         hubConnection.On<string>(HomeHub.HEARTBEAT_MESSAGE, (s) =>
         {
-            Console.WriteLine(s);
         });
 
-        hubConnection.On<EventStateChanged>(HomeHub.STATE_CHANGED_MESSAGE, (esc) =>
+        hubConnection.On<EventStateChanged>(HomeHub.ENTITY_STATE_CHANGED_MESSAGE, (esc) =>
         {
             EngineService.Home.OnEventStateChanged(esc);
-            if (!GraphEditState.IsLocked())
+            if (GraphEditState.IsLocked())
                 GraphEditState.RefreshEntity(esc.data.new_state.entity_id);
             InvokeAsync(StateHasChanged);
         });
-
+        
+        hubConnection.On<string,string,Value>(HomeHub.PIN_CHANGED_MESSAGE, (nodeID, pinName, value) =>
+        {
+            GraphEditState.PinChanged(nodeID, pinName, value);
+            InvokeAsync(StateHasChanged);
+        });
+        
         await hubConnection.StartAsync();
     }
 
