--- a/OzricUI/Components/ModeMatchDialog.razor
+++ b/OzricUI/Components/ModeMatchDialog.razor
@@ -107,7 +107,7 @@
     public ModeMatch Node { get; set; }
 
     [Parameter]
-    public IEngineService Engine { get; set; }
+    public IOzricService Ozric { get; set; }
     
     private string ID;
     private ModeMatch.Pattern selected;
