--- a/OzricUI/Components/EntityDialog.razor
+++ b/OzricUI/Components/EntityDialog.razor
@@ -1,7 +1,7 @@
 @using OzricUI.Model
 @using OzricEngine.Nodes
 @using OzricService
-@inject IEngineService EngineService
+@inject IOzricService OzricService
 
 <MudDialog>
     <DialogContent>
@@ -41,7 +41,7 @@
     public EntityNode Node { get; set; }
 
     [Parameter]
-    public IEngineService Engine { get; set; }
+    public IOzricService Ozric { get; set; }
     
     private string ID { get; set; }
     private NodeType Type;
