--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -28,8 +28,7 @@
         
         <MudText>Ozric</MudText>
         
-        &nbsp;
-        &nbsp;
+        &nbsp; &nbsp;
         
         <MudIconButton Icon="@Icons.Material.Filled.PauseCircle" Variant="Variant.Filled" Color="Color.Primary" @onclick="OnClickPause" Disabled="@(IsEditing || OzricService.Status.paused)" />
         <MudIconButton Icon="@Icons.Material.Filled.PlayCircle" Variant="Variant.Filled" Color="Color.Primary" @onclick="OnClickContinue" Disabled="@(IsEditing || !OzricService.Status.paused)" />
@@ -147,11 +146,11 @@
             .WithAutomaticReconnect()
             .WithUrl(Navigation.ToAbsoluteUri(HomeHub.ENDPOINT))
             .AddJsonProtocol(json => Json.Configure(json.PayloadSerializerOptions))
-            .ConfigureLogging(logging =>
-            {
-                logging.AddConsole();
-                logging.SetMinimumLevel(Microsoft.Extensions.Logging.LogLevel.Trace);
-            })
+            // .ConfigureLogging(logging =>
+            // {
+            //     logging.AddConsole();
+            //     logging.SetMinimumLevel(Microsoft.Extensions.Logging.LogLevel.Trace);
+            // })
             .Build();
 
         hubConnection.On<Value>(HomeHub.TEST_MESSAGE, (v) =>
@@ -171,9 +170,9 @@
             InvokeAsync(StateHasChanged);
         });
         
-        hubConnection.On<string,string,Value>(HomeHub.PIN_CHANGED_MESSAGE, (nodeID, pinName, value) =>
+        hubConnection.On<string,string,string>(HomeHub.PIN_CHANGED_MESSAGE, (nodeID, pinName, value) =>
         {
-            GraphEditState.PinChanged(nodeID, pinName, value);
+            GraphEditState.PinChanged(nodeID, pinName, Json.Deserialize<Value>(value));
             InvokeAsync(StateHasChanged);
         });
         
@@ -400,7 +399,7 @@
         {
             { "Model", model },
             { "Node", node },
-            { "Engine", OzricService }
+            { "Ozric", OzricService }
         };
 
         var options = GetDialogOptions();
