--- a/OzricUI/Components/GraphEditor.razor
+++ b/OzricUI/Components/GraphEditor.razor
@@ -347,7 +347,7 @@
                 return new MediaPlayerModel(mp, point);
 
             case BinaryChoice s:
-                return new BooleanChoiceModel(s, point);
+                return new BinaryChoiceModel(s, point);
 
             case ModeSwitch ms:
                 return new ModeSwitchModel(ms, point);
