--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -3,20 +3,21 @@
 @using OzricEngine.Nodes
 @using OzricEngine.Values
 @using OzricService
-@using OzricUI.Components 
+@using OzricUI.Components
 @using OzricUI.Model
 @using Size = MudBlazor.Size
 @using Edge = MudBlazor.Edge
 @using Blazor.Diagrams.Core.Models.Base
 @using Microsoft.AspNetCore.SignalR.Client
 @using OzricUI.Hubs
-@using ValueType = OzricEngine.Values.ValueType
 @inject IDialogService DialogService
 @inherits LayoutComponentBase
 @inject DataService Data
-@inject HomeHubController HomeHubController
 @inject IOzricService OzricService
 @inject NavigationManager Navigation
+
+@* Why is this needed? If I remove it, we get no HHC events *@
+@inject HomeHubController HHC
 
 <MudDialogProvider/>
 <MudSnackbarProvider/>
@@ -164,16 +165,23 @@
 
         hubConnection.On<EventStateChanged>(HomeHub.ENTITY_STATE_CHANGED_MESSAGE, (esc) =>
         {
-            OzricService.Home.OnEventStateChanged(esc);
-            if (GraphEditState.IsLocked())
-                GraphEditState.RefreshEntity(esc.data.new_state.entity_id);
-            InvokeAsync(StateHasChanged);
+            InvokeAsync(() =>
+            {
+                OzricService.Home.OnEventStateChanged(esc);
+                if (GraphEditState.IsLocked())
+                    GraphEditState.RefreshEntity(esc.data.new_state.entity_id);
+                
+                StateHasChanged();
+            });
         });
         
         hubConnection.On<string,string,string>(HomeHub.PIN_CHANGED_MESSAGE, (nodeID, pinName, value) =>
         {
-            GraphEditState.PinChanged(nodeID, pinName, Json.Deserialize<Value>(value));
-            InvokeAsync(StateHasChanged);
+            InvokeAsync(() =>
+            {
+                GraphEditState.PinChanged(nodeID, pinName, Json.Deserialize<Value>(value));
+                StateHasChanged();
+            });
         });
         
         await hubConnection.StartAsync();
@@ -279,78 +287,9 @@
 
     private async Task OnClickAdd()
     {
-        var choices = OzricService.Home.states
-            .Where(device => !Graph.HasDevicesNode(device.Key) && CategoryModelMappings.Exists(device.Value.GetCategory()))
-            .Select(device =>
-            {
-                var category = device.Value.GetCategory();
-                var type = CategoryModelMappings.Get(category);
-                var entityID = device.Key;
-                var id = entityID.Substring(entityID.IndexOf('.') + 1);
-                if (Graph.HasDevicesNode(id))
-                    id = Graph.CreateNodeID(category.ToString().ToLowerInvariant());
-                
-                return new AddNodeChoice(
-                    category: category,
-                    name: entityID,
-                    icon: LightModel.ICON,
-                    create: () => (Node) Activator.CreateInstance(type, id, entityID)!,
-                    once: true);
-            })
-            .ToList();
-
-        choices.Add(new AddNodeChoice(
-            category: Category.Logic,
-            name: "If Any - OR",
-            icon: IfAnyModel.ICON,
-            create: () => new IfAny(Graph.CreateNodeID("ifany-")),
-            once: false));
-
-        choices.Add(new AddNodeChoice(
-            category: Category.Logic,
-            name: "If All - AND",
-            icon: IfAllModel.ICON,
-            create: () => new IfAny(Graph.CreateNodeID("ifall-")),
-            once: false));
-
-        choices.Add(new AddNodeChoice(
-            category: Category.Logic,
-            name: "Binary Choice - Color",
-            icon: BinaryChoiceModel.ICON,
-            create: () => new BinaryChoice(Graph.CreateNodeID("color-choice-"), ValueType.Color),
-            once: false));
-
-        choices.Add(new AddNodeChoice(
-            category: Category.Constant,
-            name: "Colour",
-            icon: ConstantColorModel.ICON,
-            create: () => new Constant(Graph.CreateNodeID("colour-"), ColorRGB.WHITE),
-            once: false));
-
-        choices.Add(new AddNodeChoice(
-            category: Category.Logic,
-            name: "Mode Matches",
-            icon: ModeMatchModel.ICON,
-            create: () => new ModeMatch(Graph.CreateNodeID("match-")),
-            once: false));
-
-        choices.Add(new AddNodeChoice(
-            category: Category.Logic,
-            name: "Tween Color",
-            icon: TweenModel.ICON,
-            create: () => new Tween(Graph.CreateNodeID("tween-"), ValueType.Color),
-            once: false));
-
-        choices.Add(new AddNodeChoice(
-            category: Category.Logic,
-            name: "Tween Scalar",
-            icon: TweenModel.ICON,
-            create: () => new Tween(Graph.CreateNodeID("tween-"), ValueType.Scalar),
-            once: false));
-
         var parameters = new DialogParameters
         {
-            { "Choices", choices },
+            { "Choices", AddNodeChoice.GetChoices(OzricService.Home, Graph) },
             { "OnAdd", AddNode }
         };
 
@@ -374,6 +313,7 @@
     {
         new(typeof(LightModel), typeof(LightDialog), "Light"),
         new(typeof(ModeMatchModel), typeof(ModeMatchDialog), "Mode Match"),
+        new(typeof(ModeSwitchModel), typeof(ModeSwitchDialog), "Mode Switch"),
         new(typeof(ConstantColorModel), typeof(ColorConstantDialog), "Color"),
         new(typeof(EntityModel), typeof(EntityDialog), "Entity"),
         new(typeof(GraphNodeModel), typeof(NodeDialog), "Node"),
