Day phases dialog coming together.

--- a/OzricUI/Components/ConstantColorDialog.razor
+++ b/OzricUI/Components/ConstantColorDialog.razor
@@ -103,7 +103,7 @@
     private MudColor _pickerColor { get; set; }
     private ColorMode _colorMode { get; set; }
     private Light? _previewLight { get; set; }
-    private System.Timers.Timer _timer;
+    private Timer _timer;
 
     private const int H_SCALE = 360;
     private const int S_SCALE = 100;
