--- a/OzricUI/Components/ValueComponent.razor
+++ b/OzricUI/Components/ValueComponent.razor
@@ -1,5 +1,4 @@
 @using OzricEngine.Values
-@using ValueType = OzricEngine.Values.ValueType
 @using Boolean = OzricEngine.Values.Boolean
 @switch (Value)
 {
@@ -12,13 +11,13 @@
     {
         if (c.brightness == 0)
         {
-            <span style="background-color: black; display: inline-block; width: 16px; height: 16px;">&nbsp;</span>
+            <span style="background-color: black; display: inline-block; width: 16px; height: 16px;" class="rounded">&nbsp;</span>
             <span>&nbsp;</span>
             <span>Off</span>
         }
         else
         {
-            <span style="background-color: #@(c.ToHexString()); display: inline-block; width: 16px; height: 16px;">&nbsp;</span>
+            <span style="background-color: #@(c.ToHexString()); display: inline-block; width: 16px; height: 16px;" class="rounded">&nbsp;</span>
             <span>&nbsp;</span>
 
             switch (c)
@@ -35,12 +34,12 @@
                 }
                 case ColorHS hs:
                 {
-                    <span>H/S: @(hs.h)/@(hs.s)</span>
+                    <span>H/S: @(hs.h.ToString("F2"))/@(hs.s.ToString("F2"))</span>
                     break;
                 }
                 case ColorXY xy:
                 {
-                    <span>X/Y: @(xy.x)/@(xy.y)</span>
+                    <span>X/Y: @(xy.x.ToString("F2"))/@(xy.y.ToString("F2"))</span>
                     break;
                 }
             }
